# llm-ops-platform

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  eval-regression.yml
docs/: agent-design.md  architecture.md  eval-strategy.md  rag-design.md  runbook.md  security.md
scripts/: __init__.py  cost_report.py  run_eval.py  seed_data.py
src/: config.py  main.py
src/agent/: __init__.py  fallback.py  guardrails.py  planner.py  runtime.py  state.py
src/api/: dependencies.py
src/db/: models.py  session.py  vector_store.py
src/eval/: __init__.py  datasets.py  regression.py  runner.py  synthetic_data.py
src/llm/: __init__.py  cache.py  pii_sanitizing_provider.py  prompt_manager.py  router.py  token_counter.py
src/monitoring/: __init__.py  cost_tracker.py  error_analyzer.py  logger.py  metrics.py  pii_log_processor.py
src/rag/: chunker.py  embedder.py  gemini_embedder.py  generator.py  index_manager.py  pipeline.py  preprocessor.py  retriever.py
src/security/: audit_log.py  permission.py  pii_detector.py  prompt_injection.py
src/web/: __init__.py  csrf.py  dependencies.py  templates.py
tests/integration/: conftest.py  test_agent_runtime.py  test_api_endpoints.py  test_rag_pipeline.py
tests/unit/: conftest.py  test_admin_route.py  test_agent_route.py  test_agent_runtime.py  test_audit_log.py  test_auth.py  test_calculator.py  test_chat_route.py  test_config.py  test_cost_tracker.py  test_dependencies.py  test_eval_route.py  test_eval_runner.py  test_faithfulness.py  test_fallback.py  test_guardrails.py  (+18 more)
(+139 files in other folders)
