[project]
name = "llm-ops-platform"
version = "0.1.0"
description = "Production-ready LLM application platform with RAG, Agent, Evaluation, Monitoring, and Security"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "tiktoken>=0.8.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.22",
    "itsdangerous>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "llm: tests that require LLM API calls (deselect with '-m \"not llm\"')",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"
plugins = []

[[tool.mypy.overrides]]
module = [
    "sqlmodel.*",
    "pgvector.*",
    "jose.*",
    "passlib.*",
    "bcrypt.*",
    "asyncpg.*",
]
ignore_missing_imports = true
